# hyperion-k8s

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  circle.yml  docker-compose.yml  hyperionrc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tmux.sh  tox.ini  wercker.yml
OLD/: Dockerfile  Makefile
addons/: hyperion_client.py
ansible/: custom  hyperion  hyperion~  master.playbook  minions.playbook  nodes.yml
client/: hyperion.sh  hyperion_client.py  hyperion_client.py~
config/: master.yml  minion.yml
coreos/: user-data
elasticsearch/: Dockerfile  Makefile  hyperion-elasticsearch.service  logging.yml  run  supervisord.conf
etc/: hyperion.json
grafana/: config.js
graphite/: storage-schemas.conf
hyperion/: index.html
hyperiontests/: __init__.py  hyperion.py  settings.py  test_docker.py  test_elasticsearch.py  test_grafana.py  test_influxdb.py  test_kibana.py  test_redis.py
influxdb/: config.toml
k8s/: elasticsearch-service.json
kibana/: hyperion.json
logging/: Dockerfile  elasticsearch.conf  nginx.conf  supervisord.conf
logging-metrics/: Dockerfile  Makefile
logging-ui/: Makefile  nginx.conf
logs/: fluent.conf
logstash/: indexer.conf  nginx.conf
monitoring/: Dockerfile  Makefile  supervisord.conf
monitoring-metrics/: Dockerfile  Makefile  hyperion-monitoring-metrics.service  supervisord.conf
monitoring-ui/: Dockerfile  Makefile  grafana_config.js  hyperion-monitoring-ui.service  influxdb_config.js  influxdb_config.js.tmpl  influxdb_config.toml  nginx.conf
(+116 files in other folders)
