[metadata]
name = hyperion

summary = Hyperion
description-file = README.md
author = Nicolas Lamirault
author-email = nicolas.lamirault@gmail.com
home-page = https://github.com/nlamirault/hyperion
classifier =
    Environment :: Hyperion
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    hyperiontests

[nosetests]
match=^test
where=hyperiontests
nocapture=1
cover-package=hyperiontests
cover-erase=1
